--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Berserk - La Marca del Sacrificio</title>
+    <title>Berserk</title>
     <style>
         body { 
             font-family: Arial, sans-serif; 
